// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`multiple failures error messages 1`] = `
"
MultipleFailures
    UnsatisfiedSchema
        path: string-instead-of-object/.schema.autogen.json
        error:
            <data> should be object
    UnsatisfiedSchema
        path: missing-instruction/.schema.autogen.json
        error:
            <data> should have required property 'instruction'
    UnsatisfiedSchema
        path: invalid-instruction/.schema.autogen.json
        error:
            <data>.instruction should be object
            <data>.instruction should be object
            <data>.instruction should match some schema in anyOf
    UnsatisfiedSchema
        path: multiple-errors/.schema.autogen.json
        error:
            <data>.instruction.output should be null
            <data>.instruction.symbol should be null
            <data>.instruction.compilerOptions.allowJs should be boolean
            <data>.instruction.compilerOptions.checkJs should be boolean
            <data>.instruction.compilerOptions.esModuleInterop should be boolean
            <data>.instruction.schemaSettings.excludePrivate should be boolean
            <data>.instruction.schemaSettings.defaultNumberType should be equal to one of the allowed values
                allowed values: [ 'integer', 'number' ]
            <data>.instruction.input[1] should be string
            <data>.instruction.input[2] should be string
            <data>.instruction.input should be string
            <data>.instruction.input should match some schema in anyOf
            <data>.instruction.compilerOptions.allowJs should be boolean
            <data>.instruction.compilerOptions.checkJs should be boolean
            <data>.instruction.compilerOptions.esModuleInterop should be boolean
            <data>.instruction.schemaSettings.excludePrivate should be boolean
            <data>.instruction.schemaSettings.defaultNumberType should be equal to one of the allowed values
                allowed values: [ 'integer', 'number' ]
            <data>.instruction.input[1] should be string
            <data>.instruction.input[2] should be string
            <data>.instruction.input should be string
            <data>.instruction.input should match some schema in anyOf
            <data>.instruction.output should be object
            <data>.instruction.output[2].filename should be string
            <data>.instruction.output[2] should be string
            <data>.instruction.output[2] should match some schema in anyOf
            <data>.instruction.output[3] should have required property 'filename'
            <data>.instruction.output[3] should be string
            <data>.instruction.output[3] should match some schema in anyOf
            <data>.instruction.output should be string
            <data>.instruction.output should match some schema in anyOf
            <data>.instruction should match some schema in anyOf
"
`;

exports[`multiple failures returns result matching snapshot 1`] = `
MultipleFailures {
  "code": 2,
  "error": Array [
    UnsatisfiedSchema {
      "code": 12,
      "error": Array [
        Object {
          "dataPath": "",
          "keyword": "type",
          "message": "should be object",
          "params": Object {
            "type": "object",
          },
          "schemaPath": "#/type",
        },
      ],
      "path": "string-instead-of-object/.schema.autogen.json",
      "value": undefined,
    },
    UnsatisfiedSchema {
      "code": 12,
      "error": Array [
        Object {
          "dataPath": "",
          "keyword": "required",
          "message": "should have required property 'instruction'",
          "params": Object {
            "missingProperty": "instruction",
          },
          "schemaPath": "#/required",
        },
      ],
      "path": "missing-instruction/.schema.autogen.json",
      "value": undefined,
    },
    UnsatisfiedSchema {
      "code": 12,
      "error": Array [
        Object {
          "dataPath": ".instruction",
          "keyword": "type",
          "message": "should be object",
          "params": Object {
            "type": "object",
          },
          "schemaPath": "#/type",
        },
        Object {
          "dataPath": ".instruction",
          "keyword": "type",
          "message": "should be object",
          "params": Object {
            "type": "object",
          },
          "schemaPath": "#/type",
        },
        Object {
          "dataPath": ".instruction",
          "keyword": "anyOf",
          "message": "should match some schema in anyOf",
          "params": Object {},
          "schemaPath": "#/properties/instruction/anyOf",
        },
      ],
      "path": "invalid-instruction/.schema.autogen.json",
      "value": undefined,
    },
    UnsatisfiedSchema {
      "code": 12,
      "error": Array [
        Object {
          "dataPath": ".instruction.output",
          "keyword": "type",
          "message": "should be null",
          "params": Object {
            "type": "null",
          },
          "schemaPath": "#/properties/output/type",
        },
        Object {
          "dataPath": ".instruction.symbol",
          "keyword": "type",
          "message": "should be null",
          "params": Object {
            "type": "null",
          },
          "schemaPath": "#/properties/symbol/type",
        },
        Object {
          "dataPath": ".instruction.compilerOptions.allowJs",
          "keyword": "type",
          "message": "should be boolean",
          "params": Object {
            "type": "boolean",
          },
          "schemaPath": "#/properties/compilerOptions/properties/allowJs/type",
        },
        Object {
          "dataPath": ".instruction.compilerOptions.checkJs",
          "keyword": "type",
          "message": "should be boolean",
          "params": Object {
            "type": "boolean",
          },
          "schemaPath": "#/properties/compilerOptions/properties/checkJs/type",
        },
        Object {
          "dataPath": ".instruction.compilerOptions.esModuleInterop",
          "keyword": "type",
          "message": "should be boolean",
          "params": Object {
            "type": "boolean",
          },
          "schemaPath": "#/properties/compilerOptions/properties/esModuleInterop/type",
        },
        Object {
          "dataPath": ".instruction.schemaSettings.excludePrivate",
          "keyword": "type",
          "message": "should be boolean",
          "params": Object {
            "type": "boolean",
          },
          "schemaPath": "#/definitions/Partial<Args>/properties/excludePrivate/type",
        },
        Object {
          "dataPath": ".instruction.schemaSettings.defaultNumberType",
          "keyword": "enum",
          "message": "should be equal to one of the allowed values",
          "params": Object {
            "allowedValues": Array [
              "integer",
              "number",
            ],
          },
          "schemaPath": "#/definitions/Partial<Args>/properties/defaultNumberType/enum",
        },
        Object {
          "dataPath": ".instruction.input[1]",
          "keyword": "type",
          "message": "should be string",
          "params": Object {
            "type": "string",
          },
          "schemaPath": "#/properties/input/anyOf/0/items/type",
        },
        Object {
          "dataPath": ".instruction.input[2]",
          "keyword": "type",
          "message": "should be string",
          "params": Object {
            "type": "string",
          },
          "schemaPath": "#/properties/input/anyOf/0/items/type",
        },
        Object {
          "dataPath": ".instruction.input",
          "keyword": "type",
          "message": "should be string",
          "params": Object {
            "type": "string",
          },
          "schemaPath": "#/properties/input/anyOf/1/type",
        },
        Object {
          "dataPath": ".instruction.input",
          "keyword": "anyOf",
          "message": "should match some schema in anyOf",
          "params": Object {},
          "schemaPath": "#/properties/input/anyOf",
        },
        Object {
          "dataPath": ".instruction.compilerOptions.allowJs",
          "keyword": "type",
          "message": "should be boolean",
          "params": Object {
            "type": "boolean",
          },
          "schemaPath": "#/properties/compilerOptions/properties/allowJs/type",
        },
        Object {
          "dataPath": ".instruction.compilerOptions.checkJs",
          "keyword": "type",
          "message": "should be boolean",
          "params": Object {
            "type": "boolean",
          },
          "schemaPath": "#/properties/compilerOptions/properties/checkJs/type",
        },
        Object {
          "dataPath": ".instruction.compilerOptions.esModuleInterop",
          "keyword": "type",
          "message": "should be boolean",
          "params": Object {
            "type": "boolean",
          },
          "schemaPath": "#/properties/compilerOptions/properties/esModuleInterop/type",
        },
        Object {
          "dataPath": ".instruction.schemaSettings.excludePrivate",
          "keyword": "type",
          "message": "should be boolean",
          "params": Object {
            "type": "boolean",
          },
          "schemaPath": "#/definitions/Partial<Args>/properties/excludePrivate/type",
        },
        Object {
          "dataPath": ".instruction.schemaSettings.defaultNumberType",
          "keyword": "enum",
          "message": "should be equal to one of the allowed values",
          "params": Object {
            "allowedValues": Array [
              "integer",
              "number",
            ],
          },
          "schemaPath": "#/definitions/Partial<Args>/properties/defaultNumberType/enum",
        },
        Object {
          "dataPath": ".instruction.input[1]",
          "keyword": "type",
          "message": "should be string",
          "params": Object {
            "type": "string",
          },
          "schemaPath": "#/properties/input/anyOf/0/items/type",
        },
        Object {
          "dataPath": ".instruction.input[2]",
          "keyword": "type",
          "message": "should be string",
          "params": Object {
            "type": "string",
          },
          "schemaPath": "#/properties/input/anyOf/0/items/type",
        },
        Object {
          "dataPath": ".instruction.input",
          "keyword": "type",
          "message": "should be string",
          "params": Object {
            "type": "string",
          },
          "schemaPath": "#/properties/input/anyOf/1/type",
        },
        Object {
          "dataPath": ".instruction.input",
          "keyword": "anyOf",
          "message": "should match some schema in anyOf",
          "params": Object {},
          "schemaPath": "#/properties/input/anyOf",
        },
        Object {
          "dataPath": ".instruction.output",
          "keyword": "type",
          "message": "should be object",
          "params": Object {
            "type": "object",
          },
          "schemaPath": "#/definitions/OutputDescriptor/type",
        },
        Object {
          "dataPath": ".instruction.output[2].filename",
          "keyword": "type",
          "message": "should be string",
          "params": Object {
            "type": "string",
          },
          "schemaPath": "#/definitions/OutputDescriptor/properties/filename/type",
        },
        Object {
          "dataPath": ".instruction.output[2]",
          "keyword": "type",
          "message": "should be string",
          "params": Object {
            "type": "string",
          },
          "schemaPath": "#/properties/output/anyOf/1/items/anyOf/1/type",
        },
        Object {
          "dataPath": ".instruction.output[2]",
          "keyword": "anyOf",
          "message": "should match some schema in anyOf",
          "params": Object {},
          "schemaPath": "#/properties/output/anyOf/1/items/anyOf",
        },
        Object {
          "dataPath": ".instruction.output[3]",
          "keyword": "required",
          "message": "should have required property 'filename'",
          "params": Object {
            "missingProperty": "filename",
          },
          "schemaPath": "#/definitions/OutputDescriptor/required",
        },
        Object {
          "dataPath": ".instruction.output[3]",
          "keyword": "type",
          "message": "should be string",
          "params": Object {
            "type": "string",
          },
          "schemaPath": "#/properties/output/anyOf/1/items/anyOf/1/type",
        },
        Object {
          "dataPath": ".instruction.output[3]",
          "keyword": "anyOf",
          "message": "should match some schema in anyOf",
          "params": Object {},
          "schemaPath": "#/properties/output/anyOf/1/items/anyOf",
        },
        Object {
          "dataPath": ".instruction.output",
          "keyword": "type",
          "message": "should be string",
          "params": Object {
            "type": "string",
          },
          "schemaPath": "#/properties/output/anyOf/2/type",
        },
        Object {
          "dataPath": ".instruction.output",
          "keyword": "anyOf",
          "message": "should match some schema in anyOf",
          "params": Object {},
          "schemaPath": "#/properties/output/anyOf",
        },
        Object {
          "dataPath": ".instruction",
          "keyword": "anyOf",
          "message": "should match some schema in anyOf",
          "params": Object {},
          "schemaPath": "#/properties/instruction/anyOf",
        },
      ],
      "path": "multiple-errors/.schema.autogen.json",
      "value": undefined,
    },
  ],
  "value": undefined,
}
`;

exports[`single failure error messages 1`] = `
"
UnsatisfiedSchema
    path: multiple-errors/.schema.autogen.json
    error:
        <data>.instruction.output should be null
        <data>.instruction.symbol should be null
        <data>.instruction.compilerOptions.allowJs should be boolean
        <data>.instruction.compilerOptions.checkJs should be boolean
        <data>.instruction.compilerOptions.esModuleInterop should be boolean
        <data>.instruction.schemaSettings.excludePrivate should be boolean
        <data>.instruction.schemaSettings.defaultNumberType should be equal to one of the allowed values
            allowed values: [ 'integer', 'number' ]
        <data>.instruction.input[1] should be string
        <data>.instruction.input[2] should be string
        <data>.instruction.input should be string
        <data>.instruction.input should match some schema in anyOf
        <data>.instruction.compilerOptions.allowJs should be boolean
        <data>.instruction.compilerOptions.checkJs should be boolean
        <data>.instruction.compilerOptions.esModuleInterop should be boolean
        <data>.instruction.schemaSettings.excludePrivate should be boolean
        <data>.instruction.schemaSettings.defaultNumberType should be equal to one of the allowed values
            allowed values: [ 'integer', 'number' ]
        <data>.instruction.input[1] should be string
        <data>.instruction.input[2] should be string
        <data>.instruction.input should be string
        <data>.instruction.input should match some schema in anyOf
        <data>.instruction.output should be object
        <data>.instruction.output[2].filename should be string
        <data>.instruction.output[2] should be string
        <data>.instruction.output[2] should match some schema in anyOf
        <data>.instruction.output[3] should have required property 'filename'
        <data>.instruction.output[3] should be string
        <data>.instruction.output[3] should match some schema in anyOf
        <data>.instruction.output should be string
        <data>.instruction.output should match some schema in anyOf
        <data>.instruction should match some schema in anyOf
"
`;

exports[`single failure returns result matching snapshot 1`] = `
UnsatisfiedSchema {
  "code": 12,
  "error": Array [
    Object {
      "dataPath": ".instruction.output",
      "keyword": "type",
      "message": "should be null",
      "params": Object {
        "type": "null",
      },
      "schemaPath": "#/properties/output/type",
    },
    Object {
      "dataPath": ".instruction.symbol",
      "keyword": "type",
      "message": "should be null",
      "params": Object {
        "type": "null",
      },
      "schemaPath": "#/properties/symbol/type",
    },
    Object {
      "dataPath": ".instruction.compilerOptions.allowJs",
      "keyword": "type",
      "message": "should be boolean",
      "params": Object {
        "type": "boolean",
      },
      "schemaPath": "#/properties/compilerOptions/properties/allowJs/type",
    },
    Object {
      "dataPath": ".instruction.compilerOptions.checkJs",
      "keyword": "type",
      "message": "should be boolean",
      "params": Object {
        "type": "boolean",
      },
      "schemaPath": "#/properties/compilerOptions/properties/checkJs/type",
    },
    Object {
      "dataPath": ".instruction.compilerOptions.esModuleInterop",
      "keyword": "type",
      "message": "should be boolean",
      "params": Object {
        "type": "boolean",
      },
      "schemaPath": "#/properties/compilerOptions/properties/esModuleInterop/type",
    },
    Object {
      "dataPath": ".instruction.schemaSettings.excludePrivate",
      "keyword": "type",
      "message": "should be boolean",
      "params": Object {
        "type": "boolean",
      },
      "schemaPath": "#/definitions/Partial<Args>/properties/excludePrivate/type",
    },
    Object {
      "dataPath": ".instruction.schemaSettings.defaultNumberType",
      "keyword": "enum",
      "message": "should be equal to one of the allowed values",
      "params": Object {
        "allowedValues": Array [
          "integer",
          "number",
        ],
      },
      "schemaPath": "#/definitions/Partial<Args>/properties/defaultNumberType/enum",
    },
    Object {
      "dataPath": ".instruction.input[1]",
      "keyword": "type",
      "message": "should be string",
      "params": Object {
        "type": "string",
      },
      "schemaPath": "#/properties/input/anyOf/0/items/type",
    },
    Object {
      "dataPath": ".instruction.input[2]",
      "keyword": "type",
      "message": "should be string",
      "params": Object {
        "type": "string",
      },
      "schemaPath": "#/properties/input/anyOf/0/items/type",
    },
    Object {
      "dataPath": ".instruction.input",
      "keyword": "type",
      "message": "should be string",
      "params": Object {
        "type": "string",
      },
      "schemaPath": "#/properties/input/anyOf/1/type",
    },
    Object {
      "dataPath": ".instruction.input",
      "keyword": "anyOf",
      "message": "should match some schema in anyOf",
      "params": Object {},
      "schemaPath": "#/properties/input/anyOf",
    },
    Object {
      "dataPath": ".instruction.compilerOptions.allowJs",
      "keyword": "type",
      "message": "should be boolean",
      "params": Object {
        "type": "boolean",
      },
      "schemaPath": "#/properties/compilerOptions/properties/allowJs/type",
    },
    Object {
      "dataPath": ".instruction.compilerOptions.checkJs",
      "keyword": "type",
      "message": "should be boolean",
      "params": Object {
        "type": "boolean",
      },
      "schemaPath": "#/properties/compilerOptions/properties/checkJs/type",
    },
    Object {
      "dataPath": ".instruction.compilerOptions.esModuleInterop",
      "keyword": "type",
      "message": "should be boolean",
      "params": Object {
        "type": "boolean",
      },
      "schemaPath": "#/properties/compilerOptions/properties/esModuleInterop/type",
    },
    Object {
      "dataPath": ".instruction.schemaSettings.excludePrivate",
      "keyword": "type",
      "message": "should be boolean",
      "params": Object {
        "type": "boolean",
      },
      "schemaPath": "#/definitions/Partial<Args>/properties/excludePrivate/type",
    },
    Object {
      "dataPath": ".instruction.schemaSettings.defaultNumberType",
      "keyword": "enum",
      "message": "should be equal to one of the allowed values",
      "params": Object {
        "allowedValues": Array [
          "integer",
          "number",
        ],
      },
      "schemaPath": "#/definitions/Partial<Args>/properties/defaultNumberType/enum",
    },
    Object {
      "dataPath": ".instruction.input[1]",
      "keyword": "type",
      "message": "should be string",
      "params": Object {
        "type": "string",
      },
      "schemaPath": "#/properties/input/anyOf/0/items/type",
    },
    Object {
      "dataPath": ".instruction.input[2]",
      "keyword": "type",
      "message": "should be string",
      "params": Object {
        "type": "string",
      },
      "schemaPath": "#/properties/input/anyOf/0/items/type",
    },
    Object {
      "dataPath": ".instruction.input",
      "keyword": "type",
      "message": "should be string",
      "params": Object {
        "type": "string",
      },
      "schemaPath": "#/properties/input/anyOf/1/type",
    },
    Object {
      "dataPath": ".instruction.input",
      "keyword": "anyOf",
      "message": "should match some schema in anyOf",
      "params": Object {},
      "schemaPath": "#/properties/input/anyOf",
    },
    Object {
      "dataPath": ".instruction.output",
      "keyword": "type",
      "message": "should be object",
      "params": Object {
        "type": "object",
      },
      "schemaPath": "#/definitions/OutputDescriptor/type",
    },
    Object {
      "dataPath": ".instruction.output[2].filename",
      "keyword": "type",
      "message": "should be string",
      "params": Object {
        "type": "string",
      },
      "schemaPath": "#/definitions/OutputDescriptor/properties/filename/type",
    },
    Object {
      "dataPath": ".instruction.output[2]",
      "keyword": "type",
      "message": "should be string",
      "params": Object {
        "type": "string",
      },
      "schemaPath": "#/properties/output/anyOf/1/items/anyOf/1/type",
    },
    Object {
      "dataPath": ".instruction.output[2]",
      "keyword": "anyOf",
      "message": "should match some schema in anyOf",
      "params": Object {},
      "schemaPath": "#/properties/output/anyOf/1/items/anyOf",
    },
    Object {
      "dataPath": ".instruction.output[3]",
      "keyword": "required",
      "message": "should have required property 'filename'",
      "params": Object {
        "missingProperty": "filename",
      },
      "schemaPath": "#/definitions/OutputDescriptor/required",
    },
    Object {
      "dataPath": ".instruction.output[3]",
      "keyword": "type",
      "message": "should be string",
      "params": Object {
        "type": "string",
      },
      "schemaPath": "#/properties/output/anyOf/1/items/anyOf/1/type",
    },
    Object {
      "dataPath": ".instruction.output[3]",
      "keyword": "anyOf",
      "message": "should match some schema in anyOf",
      "params": Object {},
      "schemaPath": "#/properties/output/anyOf/1/items/anyOf",
    },
    Object {
      "dataPath": ".instruction.output",
      "keyword": "type",
      "message": "should be string",
      "params": Object {
        "type": "string",
      },
      "schemaPath": "#/properties/output/anyOf/2/type",
    },
    Object {
      "dataPath": ".instruction.output",
      "keyword": "anyOf",
      "message": "should match some schema in anyOf",
      "params": Object {},
      "schemaPath": "#/properties/output/anyOf",
    },
    Object {
      "dataPath": ".instruction",
      "keyword": "anyOf",
      "message": "should match some schema in anyOf",
      "params": Object {},
      "schemaPath": "#/properties/instruction/anyOf",
    },
  ],
  "path": "multiple-errors/.schema.autogen.json",
  "value": undefined,
}
`;
